--- a/public/assets/css/contacto.css
+++ b/public/assets/css/contacto.css
@@ -29,7 +29,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000 !important;
+    z-index: 1000;
     background: #88b988;
     backdrop-filter: blur(5px);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -324,115 +324,139 @@ body {
     background-color: #6fa76f;
 }
 
+@media (max-width: 1400px) {
 
-@media (max-width: 768px) {
-     body {
-        padding-top: 80px;
-        overflow: auto;
+    .nav-phrase{
+        font-size:15px;
     }
 
-    .nav-wrapper {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        background: #88b988;
-        backdrop-filter: blur(5px);
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
-        padding: 0;
-        height: auto;
+    .recuadros-container {
+       margin-left: 150px;
     }
 
-    .nav {
-        display: flex;
-        flex-direction: column; 
-        align-items: center;
-        padding: 10px 15px;
-        width: 100%;
-        max-width: 100%;
-        margin: 0 auto;
+    .salto-1400 {
+        display: block;
+    }
+}
+
+@media (max-width: 1200px) {
+
+    .nav-menu ul li .link {
+        margin: 0 20px;
+        margin-left: 0;
     }
 
-    .nav-logo img {
-        height: 70px; 
-        width: auto;
+    .dropdown-menu {
+        left: -15px;        
+        margin-left: -10px;
+        top: 110%; 
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        margin-left: 0px;
+    }
+
+    .dropdown-toggle .bx-chevron-down {
+        transform: translateY(2px);
+    }
+
+    .recuadros-container {
+       margin-left: 120px;
+    }
+   
+}
+
+@media (max-width: 992px) {
+
+   .nav-menu ul li .link {
+        margin: 0 12px;
+        margin-left: 0;
+        font-size: 16px;
     }
 
     .nav-phrase {
-        font-size: 3vw; 
-        display: block;
-        width: 100%;
-        text-align: center;
-        margin: 2px 0;
-        padding: 0 2px; 
-        color: #f8f8f8f5;
-        font-weight: bold;
-        line-height: 1.3;
-        order: 2;
+        margin-left: -10px; 
+        transform: translateX(15px); 
+        font-size:13px;
     }
 
     .nav-center-phrase {
-        font-size: 1rem; 
-        position: static;
-        transform: none;
-        margin: 2px 0;
-        color: white;
-        order: 1;
+        left: 50%; 
+        transform: translateX(-50%);
+    }
+
+    .texto-contacto h2 {
+        font-size: 1.6rem;   
+    }
+
+    .texto-contacto p {
+        font-size: 0.92rem;
+        line-height: 1.4;    
+    }
+
+    .logo-pyp img,
+    .pyp-log {
+        width: 350px;     /
+        height: auto;
+        margin-top:40px;
+    }
+
+    .imagen-flotante {
+        width: 570px;   
+        height: auto;
+    }
+   
+}
+
+@media (max-width: 768px) {
+    html,
+    body {
+        overflow-y: auto;
+        height: auto;
+    }
+
+    body {
+        padding-top: 130px; 
+    }
+    .nav-wrapper {
+        padding: 20px 16px -20px; 
+    }
+
+    .nav {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px; 
     }
 
     .nav-menu {
-        display: flex;
+        order: 1;
         width: 100%;
-        background: transparent;
-        margin-top: 3px;
-        justify-content: center;
-        padding: 0; 
-    }
-
-    .nav-menu ul {
         display: flex;
-        flex-direction: row; 
-        width: auto;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        gap: 2px;
-    }
-
-    .nav-menu ul li {
-        margin: 0;
-        position: relative;  
-        padding: 0; 
+        justify-content: center;
     }
 
     .nav-menu ul li .link {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        text-decoration: none;
-        font-weight: 500;
-        color: #fff;
-        padding: 4px 3px; 
-        font-size: 13px; 
-        display: block;
-        border-radius: 5px;
-        transition: all 0.2s ease;;
-        white-space: nowrap; 
-        margin: 0 12px;
-        position: relative;
+        font-size: 22px;
+        margin: 0 25px;
+       
     }
 
-    .nav-menu ul li .link:hover {
-        background: rgba(224, 76, 200, 0.3);
+    .nav-phrase {
+        order: 2;
+        margin: 0;
+        text-align: center;
+        font-size: 22px;
+        white-space: normal;
     }
 
-    .nav-menu ul li .link::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -2px; 
-        width: 0;
-        height: 2px;
-        transition: width 0.3s ease;
+    .nav-center-phrase {
+        order: 3;
+        position: static;      
+        transform: none;       
+        margin: 0;
+        font-size: 1.7rem;
+        margin-top: 10px;
+        text-align: center;
     }
 
     .dropdown-menu {
@@ -501,8 +525,8 @@ body {
 
     .pyp-log {
         position: relative;
-        width: 80%;
-        max-width: 250px;
+        width: 90%;
+        max-width: 350px;
         top: 50px;
         left: -10px;
         transform: none;
@@ -537,7 +561,8 @@ body {
         transform: none;
         width: 100%;
         padding: 20px;
-        gap: 15px;
+        gap: 25px;
+        margin-left:0;
     }
 
     .recuadro {
@@ -566,153 +591,94 @@ body {
     }
 }
 
-@media (min-width: 769px) and (max-width: 1366px) {
+@media (max-width: 578px) {
 
-    body {
-        padding-top: 10px !important; 
-        margin-top: 10px !important;
-    }
-
-    .nav-menu ul {
-        gap: 2px; 
+    .nav-wrapper {
+        padding: 20px 16px -20px; 
     }
 
     .nav-menu ul li .link {
-        margin: 0 4px; 
-        padding: 4px 6px; 
+        margin: 8px;          
+        padding: 5px 8px;
+        font-size: 20px;
+        white-space: nowrap;
     }
 
     .nav-phrase {
-        font-size: 1.2vw;    
+        font-size: 21px;
+        line-height: 1.2;
+        margin-top: 7px;
     }
-
-    .nav-menu ul li .link::after {
-        bottom: 2px; 
-        height: 2px; 
-    }
-
-    .dropdown-menu {
-        margin-top: 10px !important;
-        left: -18px !important;
-    }
-
-    .dropdown-submenu .dropdown-menu {
-        min-width: 160px !important;
-        margin-left: 0 !important;
-        left: 100% !important;
-        top: -5px !important;
-    }
-
-    .pyp-log{
-        top: 200px;
-        left: -45px;
-    }
-
-    .imagen-flotante{
-        width: 35%;
-        top: 270px;
-    }
-
-    .recuadros-container {
-        width: 90%; 
-        margin-left: -35%; 
-        margin-right: 5%; 
-        transform: none !important; 
-    }
-
-    .recuadro {
-        width: 35%; 
-        max-width: 240px; 
-        padding: 15px; 
-    }
-
-    .texto-contacto h2 {
-        font-size: 34px !important; 
-    }
-    .texto-contacto p {
-        font-size: 20px !important; 
-    }
-        
+   
 }
 
 @media (max-width: 360px) {
+
     .nav {
-        padding: 8px 0px;
-        gap: -8px; 
+        gap: 8px;
     }
     
-    .nav-logo {
-        gap: 8px; 
-    }
-    
-    .nav-logo img {
-        height: 100px; 
-    }
-    
-    .nav-center-phrase {
-        font-size: 0.9rem;
-        margin: 10px 0 8px 0 !important;
-        padding: 0 8px;
+    .nav-menu ul {
+        gap: 6px;
+        flex-wrap: row; 
+        justify-content: center;
     }
 
-    .dropdown-toggle .bx-chevron-down {
-        font-size: 18px !important;
-        vertical-align: middle !important;
-        position: relative !important;
-        top: -1px !important; 
-        margin-left: -3px !important;
-        display: inline-block !important;
-    }
-
-    .dropdown-menu {
-        min-width: 180px;
-        left: -10px !important; 
-        margin-top: -10px !important; 
-        transform: none;
-        margin-left: 0;
-    }
-    
-    .dropdown-menu li a {
-        padding: 8px 12px;
-        font-size: 12px;
-    }
-    
-    .dropdown-submenu .dropdown-menu {
-        left: 97% !important; 
-        top: 0;
-        min-width: 180px;
-        margin-left: 5px !important; 
+    .nav-menu ul li .link {
+        font-size: 16px;
+        margin: 0 -2px;
+        padding-bottom: 6px;
     }
 
     .nav-phrase {
-        font-size: 3.5vw;
-        margin: 5px auto 0 auto;
-        padding: 0 10px;
+        font-size: 0.8rem;
+        line-height: 1.2;
+        margin: 4px 0 0;
+        white-space: normal;
+        text-align: center;
     }
 
-    .nav-menu ul {
-        gap: 2px; 
+    .nav-center-phrase {
+        font-size: 23px;
+        margin-top: 6px;
+        padding: 0 8px;
+        white-space: normal;
     }
-    
-    .nav-menu ul li .link {
-        margin: 0 8px; 
-        font-size: 13px;
-        padding-bottom: 8px;
+
+    .nav-menu ul li .link::after {
+        bottom: 4px;     
+        height: 2px;
     }
-    
-    .nav-search-container {
-        width: 200px;
-        margin: 5px 15px;
-    }
-    
+
     .dropdown-menu {
         min-width: 160px;
+        left: 12px;        
+        top: 160%;          
+        margin-top: 0;
     }
-    
-    .dropdown-menu li a {
-        padding: 8px 12px;
-        font-size: 12px;
-    }
-}
 
+    .dropdown-menu li a {
+        font-size: 13px;
+        padding: 8px 12px;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        left: 100%;
+        min-width: 160px;
+    }
+
+    .dropdown-toggle .bx-chevron-down {
+        font-size: 16px;
+        transform: translateY(2px);
+        margin-left: -2px;
+    }
+
+    .logo-pyp img,
+    .pyp-log {
+        width: 250px;     
+        height: auto;
+        margin-top:60px;
+    }
+   
+}
 
