--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -471,159 +471,100 @@ body {
     100% { transform: rotate(360deg); }
 }
 
-/* ===== RESPONSIVE ===== */
+@media (max-width: 1400px) {
+
+    .nav-menu ul li .link {
+        margin: 0 20px;
+        margin-left: 0;
+    }
+
+}
+
+
+@media (max-width: 1200px) {
+
+    .dropdown-toggle .bx-chevron-down {
+        font-size: 16px;
+        transform: translateY(2px);
+        margin-left: -2px;
+    }
+}
+
+@media (max-width: 992px) {
+
+    .nav-menu ul li .link {
+        margin: 0 12px;
+        margin-left: 0;
+        font-size: 16px;
+    }
+
+    .nav-phrase {
+        margin-left: -10px; 
+        transform: translateX(15px); 
+        font-size:13px;
+    }
+
+    .nav-center-phrase {
+        left: 50%; 
+        transform: translateX(-50%);
+    }
+
+}
+
 @media (max-width: 768px) {
     body {
-        padding-top: calc(80px + env(safe-area-inset-top));
+        padding-top: calc(150px + env(safe-area-inset-top));
     }
 
     .nav-wrapper {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        background: #007900;
-        backdrop-filter: blur(5px);
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
-        padding: 0;
-        height: auto;
+        padding: 20px 16px -20px; 
     }
 
     .nav {
-        display: flex;
-        flex-direction: column; 
+        flex-direction: column;
         align-items: center;
-        padding: 10px 15px;
-        width: 100%;
-        max-width: 100%;
-        margin: 0 auto;
-    }
-
-    .nav-logo img {
-        height: 70px; 
-        width: auto;
-    }
-
-
-    .nav-center-phrase {
-        font-size: 1rem; 
-        position: static;
-        transform: none;
-        margin: 2px 0;
-        color: white;
-        order: 1;
-    }
-
-
-    .nav-phrase{
-        font-size: 3.1vw; 
-        display: block;
-        width: 100%;
-        text-align: center;
-        margin: 2px 0;
-        padding: 0 2px; 
-        color: #f8f8f8f5;
-        font-weight: bold;
-        line-height: 1.3;
-        order: 2;
+        gap: 10px; 
     }
 
     .nav-menu {
-        display: flex;
+        order: 1;
         width: 100%;
-        background: transparent;
-        margin-top: 3px;
-        justify-content: center;
-        padding: 0; 
-    }
-
-    .nav-menu ul {
         display: flex;
-        flex-direction: row; 
-        width: auto;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        gap: 2px;
-    }
-
-    .nav-menu ul li {
-        margin: 0;
-        position: relative;  
-        padding: 0; 
+        justify-content: center;
     }
 
     .nav-menu ul li .link {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        text-decoration: none;
-        font-weight: 500;
-        color: #fff;
-        padding: 4px 3px; 
-        font-size: 13px; 
-        display: block;
-        border-radius: 5px;
-        transition: all 0.2s ease;;
-        white-space: nowrap; 
-        margin: 0 12px;
-        position: relative;
+        font-size: 22px;
+        margin: 0 25px;
+       
     }
 
-    .nav-menu ul li .link:hover {
-        background: #007900;
-    }
-
-    .nav-menu ul li .link::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -2px; 
-        width: 0;
-        height: 2px;
-        transition: width 0.3s ease;
-    }
-
-    .dropdown-menu {
-        position: absolute;
-        left: 0;
-        top: 200%;
-        min-width: 120px;
-        width: auto;
-        background: #007900;
-        border-radius: 0 4px 4px 4px;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-        padding: 8px 0 !important;       
-        border: 1px solid #007900; 
-        z-index: 1001;
-        display: none;
-    }
-
-    .dropdown:hover .dropdown-menu,
-    .dropdown:focus-within .dropdown-menu {
-        display: block;
-    }
-
-    .dropdown-menu li {
-        padding: 0;
+    .nav-phrase {
+        order: 2;
         margin: 0;
-        list-style: none;
+        text-align: center;
+        font-size: 22px;
+        white-space: normal;
     }
 
-    .dropdown-menu li a {
-        padding: 4px 8px !important;     
-        font-size: 13px !important;      
-        line-height: 2 !important;       
-        margin: -2px 0 !important; 
+    .nav-center-phrase {
+        order: 3;
+        position: static;      
+        transform: none;       
+        margin: 0;
+        font-size: 1.7rem;
+        margin-top: 10px;
+        text-align: center;
     }
 
-    .dropdown-menu li a:hover {
-        background: #007900;
+    .dropdown-toggle .bx-chevron-down {
+        transform: translateY(0px);
     }
-
-    .dropdown-submenu .dropdown-menu {
-        left: 100%;
-        top: 0; 
-        min-width: 100px; 
+    
+    .dropdown-menu {
+        left: -15px;        
+        margin-left: -10px;
+        top: 120%; 
     }
 
     .nav-menu-btn,
@@ -779,122 +720,91 @@ body {
     }
 }
 
-@media (min-width: 769px) and (max-width: 1366px) {
+@media (max-width: 576px) {
 
-    body {
-        padding-top: 30px !important; 
-        margin-top: 10px !important;
-    }
-
-    .nav-menu ul {
-        gap: 2px; 
+    .nav-wrapper {
+        padding: 20px 16px -20px; 
     }
 
     .nav-menu ul li .link {
-        margin: 0 4px; 
-        padding: 4px 6px; 
+        margin: 8px;          
+        padding: 5px 8px;
+        font-size: 20px;
+        white-space: nowrap;
     }
 
     .nav-phrase {
-        font-size: 1.2vw;    
-    }
-
-    .nav-menu ul li .link::after {
-        bottom: 2px; 
-        height: 2px; 
-    }
-
-    .dropdown-menu {
-        margin-top: 10px !important;
-        left: -18px !important;
+        font-size: 21px;
+        line-height: 1.2;
+        margin-top: 7px;
     }
 
     .dropdown-submenu .dropdown-menu {
-        min-width: 160px !important;
-        margin-left: 0 !important;
-        left: 100% !important;
-        top: -5px !important;
+        left: 105%;
+        min-width: 160px;
     }
-        
 }
+
 
 @media (max-width: 360px) {
     .nav {
-        padding: 8px 0px;
-        gap: -8px; 
+        gap: 8px;
     }
     
-    .nav-logo {
-        gap: 8px; 
-    }
-    
-    .nav-logo img {
-        height: 100px; 
-    }
-    
-    .nav-center-phrase {
-        font-size: 0.9rem;
-        margin: 10px 0 8px 0 !important;
-        padding: 0 8px;
+
+    .nav-menu ul {
+        gap: 6px;
+        flex-wrap: row; 
+        justify-content: center;
     }
 
-    .dropdown-toggle .bx-chevron-down {
-        font-size: 18px !important;
-        vertical-align: middle !important;
-        position: relative !important;
-        top: -1px !important; 
-        margin-left: -3px !important;
-        display: inline-block !important;
-    }
-
-    .dropdown-menu {
-        min-width: 180px;
-        left: -10px !important; 
-        margin-top: -30px !important; 
-        transform: none;
-        margin-left: 0;
-    }
-    
-    .dropdown-menu li a {
-        padding: 8px 12px;
-        font-size: 12px;
-    }
-
-    .dropdown-submenu .dropdown-menu {
-        left: 97% !important; 
-        top: 0;
-        min-width: 180px;
-        margin-left: 5px !important; 
+    .nav-menu ul li .link {
+        font-size: 16px;
+        margin: 0 -2px;
+        padding-bottom: 6px;
     }
 
     .nav-phrase {
-        font-size: 3.5vw;
-        margin: 5px auto 0 auto;
-        padding: 0 10px;
+        font-size: 0.8rem;
+        line-height: 1.2;
+        margin: 4px 0 0;
+        white-space: normal;
+        text-align: center;
     }
 
-    .nav-menu ul {
-        gap: 2px; 
+    .nav-center-phrase {
+        font-size: 23px;
+        margin-top: 6px;
+        padding: 0 8px;
+        white-space: normal;
     }
-    
-    .nav-menu ul li .link {
-        margin: 0 8px; 
-        font-size: 13px;
-        padding-bottom: 8px;
+
+    .nav-menu ul li .link::after {
+        bottom: 4px;     
+        height: 2px;
     }
-    
-    .nav-search-container {
-        width: 200px;
-        margin: 5px 15px;
-    }
-    
+
     .dropdown-menu {
         min-width: 160px;
+        left: 12px;        
+        top: 160%;          
+        margin-top: 0;
     }
-    
+
     .dropdown-menu li a {
+        font-size: 13px;
         padding: 8px 12px;
-        font-size: 12px;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        left: 100%;
+        min-width: 160px;
+    }
+
+    .dropdown-toggle .bx-chevron-down {
+        font-size: 16px;
+        transform: translateY(2px);
+        margin-left: -2px;
     }
 }
 
