--- a/public/assets/css/nosotros.css
+++ b/public/assets/css/nosotros.css
@@ -256,6 +256,7 @@ body {
 
 .box1 {
     background: url('/images/guille.jpg') no-repeat center center/contain;
+    background-size: 35% auto;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
 }
@@ -280,6 +281,7 @@ body {
 
 .box5 {
     background: url('/images/manolito.jpg') no-repeat center center/contain;
+    background-size: 25% auto;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
@@ -306,393 +308,274 @@ body {
     color: black;
 }
 
-@media (max-width: 768px) {
-    body {
-        padding-top: 70px;
-        grid-template-rows: 30vh 35vh 35vh;
-        overflow-x: hidden;
+
+@media (max-width: 1400px) {
+
+    .nav-phrase {
+        font-size: 15px;
+    }    
+
+    .nav-menu ul li .link {
+        font-size: 16px; 
+    }
+}
+
+@media (max-width: 1200px) {
+
+   .box1 {
+        background: url('/images/guille.jpg') no-repeat center center;
+        background-size: 45% auto; 
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
     }
 
-    .nav-wrapper {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        background: #fca6f7;
-        backdrop-filter: blur(5px);
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
-        padding: 0;
-        height: auto;
+    .box5 {
+        background: url('/images/manolito.jpg') no-repeat center center/contain;
+        background-size: 38% auto;
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
     }
 
-    .nav {
-        display: flex;
-        flex-direction: column; 
-        align-items: center;
-        padding: 10px 15px;
-        width: 100%;
-        max-width: 100%;
-        margin: 0 auto;
+    .nav-menu ul li .link {
+        margin: 0 20px;
+        margin-left: 0;
     }
 
-    .nav-logo img {
-        height: 70px; 
-        width: auto;
+    .dropdown-menu {
+        left: -15px;        
+        margin-left: -10px;
+        top: 110%; 
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        margin-left: 0px;
+    }
+
+    .dropdown-toggle .bx-chevron-down {
+        transform: translateY(2px);
+    }
+
+}
+
+@media (max-width: 992px) {
+
+    body{
+        padding-top:20px;
+    }
+
+    .nav-menu ul li .link {
+        margin: 0 12px;
+        margin-left: 0;
+        font-size: 16px;
     }
 
     .nav-phrase {
-        font-size: 3vw; 
-        display: block;
-        width: 100%;
-        text-align: center;
-        margin: 2px 0;
-        padding: 0 2px; 
-        color: #f8f8f8f5;
-        font-weight: bold;
-        line-height: 1.3;
-        order: 2;
+        margin-left: -10px; 
+        transform: translateX(15px); 
+        font-size:13px;
     }
 
     .nav-center-phrase {
-        font-size: 1rem; 
-        position: static;
-        transform: none;
-        margin: 2px 0;
-        color: white;
-        order: 1;
+        left: 50%; 
+        transform: translateX(-50%);
+    }
+
+}
+
+
+@media (max-width: 768px) {
+
+    html,
+    body {
+        overflow-y: auto;
+        height: auto;
+    }
+
+    body {
+        padding-top: 130px; 
+    }
+    .nav-wrapper {
+        padding: 20px 16px -20px; 
+    }
+
+    .nav {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px; 
     }
 
     .nav-menu {
-        display: flex;
+        order: 1;
         width: 100%;
-        background: transparent;
-        margin-top: 3px;
-        justify-content: center;
-        padding: 0; 
-    }
-
-    .nav-menu ul {
         display: flex;
-        flex-direction: row; 
-        width: auto;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        gap: 2px;
-    }
-
-    .nav-menu ul li {
-        margin: 0;
-        position: relative;  
-        padding: 0; 
+        justify-content: center;
     }
 
     .nav-menu ul li .link {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        text-decoration: none;
-        font-weight: 500;
-        color: #fff;
-        padding: 4px 3px; 
-        font-size: 13px; 
-        display: block;
-        border-radius: 5px;
-        transition: all 0.2s ease;;
-        white-space: nowrap; 
-        margin: 0 12px;
-        position: relative;
-    }
-
-    .nav-menu ul li .link:hover {
-        background: rgba(224, 76, 200, 0.3);
-    }
-
-    .nav-menu ul li .link::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -2px; 
-        width: 0;
-        height: 2px;
-        transition: width 0.3s ease;
-    }
-
-    .dropdown-menu {
-        position: absolute;
-        left: 0; 
-        transform: none; 
-        top: calc(100% + 20px);;
-        min-width: 160px; 
-        width: auto;
-        background: rgba(252, 166, 247, 0.98);
-        border-radius: 0 8px 8px 8px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        padding: 8px 0;
-        margin-top: 0;
-        z-index: 1001;
-        display: none;
-    }
-
-    .dropdown:hover .dropdown-menu,
-    .dropdown:focus-within .dropdown-menu {
-        display: block;
-    }
-
-    .dropdown-menu li {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-    }
-
-    .dropdown-menu li a {
-        padding: 8px 14px; 
-        font-size: 12px; 
-        color: #fff;
-        display: block;
-        text-decoration: none;
-        transition: all 0.2s ease;
-    }
-
-    .dropdown-menu li a:hover {
-        background: rgba(224, 76, 200, 0.7);
-    }
-
-    .dropdown-submenu .dropdown-menu {
-        left: 100%; 
-        top: -8px; 
-        margin-left: 0; 
-        border-radius: 8px; 
-    }
-
-    .nav-menu-btn,
-    .nav-button {
-        display: none !important;
-    }
-
-    .background-grid {
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 30vh 20vh 35vh;
-        top: 70px; 
-        height: calc(100vh - 70px);
-        width: 100%;
-        max-width: 100vw;
-        box-sizing: border-box;
-    }
-
-    .box1, .box5 {
-        padding: 5px;
-        box-sizing: border-box;
-        overflow: hidden;
-        background-size: 90%; 
-        background-position: center center; 
-        
-    }
-
-    .box2 {
-        padding: 7px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        overflow: hidden;
-        box-sizing: border-box;
-        margin-top: -10px;
-        padding-top: 40px;
-        height: 33vh;
-    }
-
-    .box2 h2 {
-        font-size: 16px;
-        margin-bottom: 4px;
-        font-weight: bold;
-        margin-top: 0;
-    }
-
-    .box2 p {
-        font-size: 10px;
-        line-height: 1.3;
-        max-width: 100%;
-        width: 100%;
-        word-wrap: break-word;
-        hyphens: auto;
-        text-align: justify;
-        overflow: visible;
-        margin: 0;
-        box-sizing: border-box;
-        display: block;
-        padding: 0 2px;
-    }
-
-    .box3 {
-        padding: 8px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        overflow: hidden;
-        box-sizing: border-box;
-        margin-top: 10px;
-    }
-
-    .box3 h2 {
-        font-size: 16px;
-        margin-bottom: 6px;
-        margin-top: 0;
-        font-weight: bold;
-    }
-
-    .box3 p {
-        font-size: 11px;
-        line-height: 1.3;
-        max-width: 100%;
-        width: 100%;
-        word-wrap: break-word;
-        hyphens: auto;
-        text-align: justify;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    .box4 {
-        padding: 8px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        text-align: center;
-        overflow: auto;
-        box-sizing: border-box;
-        height: 100%;
-        min-height: 35vh;
-    }
-
-    .box4 h2 {
-        font-size: 15px;
-        margin-bottom: 3px;
-        margin-top: 0;
-        font-weight: bold;
-    }
-
-    .box4 p {
-        font-size: 10px;
-        line-height: 1.3;
-        max-width: 100%;
-        width: 100%;
-        word-wrap: break-word;
-        hyphens: auto;
-        text-align: justify;
-        overflow: visible;
-        margin: 0;
-        box-sizing: border-box;
-        display: block;
-        padding: 0 2px;
-    }
-}
-
-
-@media (min-width: 769px) and (max-width: 1366px) {
-
-    body {
-        padding-top: 10px !important; 
-        margin-top: 10px !important;
-    }
-
-    .nav-menu ul {
-        gap: 2px; 
-    }
-
-    .nav-menu ul li .link {
-        margin: 0 4px; 
-        padding: 4px 6px; 
+        font-size: 22px;
+        margin: 0 25px;
+       
     }
 
     .nav-phrase {
-        font-size: 1.2vw;    
+        order: 2;
+        margin: 0;
+        text-align: center;
+        font-size: 22px;
+        white-space: normal;
     }
 
-    .nav-menu ul li .link::after {
-        bottom: 2px; 
-        height: 2px; 
+    .nav-center-phrase {
+        order: 3;
+        position: static;      
+        transform: none;       
+        margin: 0;
+        font-size: 1.7rem;
+        margin-top: 10px;
+        text-align: center;
+    }
+ 
+}
+
+@media (max-width: 576px) {
+
+    .nav-wrapper {
+        padding: 20px 16px -20px; 
     }
 
-    .dropdown-menu {
-        margin-top: 10px !important;
-        left: -18px !important;
+    .nav-menu ul li .link {
+        margin: 8px;          
+        padding: 5px 8px;
+        font-size: 20px;
+        white-space: nowrap;
     }
 
-    .dropdown-submenu .dropdown-menu {
-        min-width: 160px !important;
-        margin-left: 0 !important;
-        left: 100% !important;
-        top: -5px !important;
+    .nav-phrase {
+        font-size: 21px;
+        line-height: 1.2;
+        margin-top: 7px;
     }
-        
+    
 }
 
 @media (max-width: 360px) {
-    
-    .dropdown-toggle .bx-chevron-down {
-        font-size: 18px !important;
-        vertical-align: middle !important;
-        position: relative !important;
-        top: -1px !important; 
-        margin-left: -3px !important;
-        display: inline-block !important;
+
+    html,
+    body {
+        overflow-y: auto;
+        height: auto;
     }
 
-    .dropdown-menu {
-        min-width: 180px;
-        left: -10px !important; 
-        margin-top: -10px !important; 
-        transform: none;
-        margin-left: 0;
+    body {
+        padding-top: 150px; 
+    }
+
+    .nav {
+        gap: 8px;
     }
     
-    .dropdown-menu li a {
-        padding: 8px 12px;
-        font-size: 12px;
+
+    .nav-menu ul {
+        gap: 6px;
+        flex-wrap: row; 
+        justify-content: center;
     }
-    
-    .dropdown-submenu .dropdown-menu {
-        left: 97% !important; 
-        top: 0;
-        min-width: 180px;
-        margin-left: 5px !important; 
+
+    .nav-menu ul li .link {
+        font-size: 16px;
+        margin: 0 -2px;
+        padding-bottom: 6px;
     }
 
     .nav-phrase {
-        font-size: 3.5vw;
-        margin: 5px auto 0 auto;
-        padding: 0 10px;
+        font-size: 0.8rem;
+        line-height: 1.2;
+        margin: 4px 0 0;
+        white-space: normal;
+        text-align: center;
     }
 
-    .nav-menu ul {
-        gap: 2px; 
-    }
-    
-    .nav-menu ul li .link {
-        margin: 0 8px; 
-        font-size: 13px;
-        padding-bottom: 8px;
+    .nav-center-phrase {
+        font-size: 23px;
+        margin-top: 6px;
+        padding: 0 8px;
+        white-space: normal;
     }
 
-    .nav-search-container {
-        width: 200px;
-        margin: 5px 15px;
+    .nav-menu ul li .link::after {
+        bottom: 4px;     
+        height: 2px;
     }
 
     .dropdown-menu {
         min-width: 160px;
+        left: 12px;        
+        top: 160%;          
+        margin-top: 0;
     }
-    
+
     .dropdown-menu li a {
+        font-size: 13px;
         padding: 8px 12px;
-        font-size: 12px;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        left: 100%;
+        min-width: 160px;
+    }
+
+    .dropdown-toggle .bx-chevron-down {
+        font-size: 16px;
+        transform: translateY(2px);
+        margin-left: -2px;
+    }
+
+    .background-grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, auto);
+    }
+
+    .box1 {
+        grid-column: 1 / -1;
+        grid-row: 1;
+        background-size: 45% auto;
+        min-height: 140px;
+    }
+
+    .box2 {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        min-height: 140px;
+    }
+
+    .box3 {
+        grid-column: 1 / -1;
+        grid-row: 3;
+        min-height: 140px;
+    }
+
+    .box4 {
+        grid-column: 1 / -1;
+        grid-row: 4;
+        min-height: 140px;
     }
 
     .box5 {
-        background-position: center 25%;
+        grid-column: 1 / -1;
+        grid-row: 5;
+        background-size: 45% auto;
+        min-height: 160px;
+    }
+
+    .box2 h2,
+    .box3 h2,
+    .box4 h2 {
+        font-size: 18px;
+    }
+
+    .box2 p,
+    .box3 p,
+    .box4 p {
+        font-size: 14px;
     }
 }
